--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Original Lasagna</a>
+    
+    <ul>
+        <li><a href="recipes/lasagna.html">Original Lasagna</a></li>
+        <li><a href="recipes/carbonara.html">Original Carbonara</a></li>
+        <li><a href="recipes/applepie.html">Original Apple Pie</a></li>
+   </ul>
+    
 </body>
 </html>
